--- a/HackmonInternals/HackmonInternals.csproj
+++ b/HackmonInternals/HackmonInternals.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Data" />
+      <None Update="Data\Moves\TestMove.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
