--- a/HackmonInternals/HackmonInternals.csproj
+++ b/HackmonInternals/HackmonInternals.csproj
@@ -7,10 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Update="Data\Moves\TestMove.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
-      <None Update="Data\Hackmon\TestHackmon.json">
+      <None Update="Data\**">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
