Majority of battle rework done

--- a/HackmonInternals/HackmonInternals.csproj
+++ b/HackmonInternals/HackmonInternals.csproj
@@ -13,4 +13,8 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TurnBasedBattleSystem\TurnBasedBattleSystem\TurnBasedBattleSystem.csproj" />
+    </ItemGroup>
+
 </Project>
